[package]
name = "rust-namespaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
